Delete CSS for trying to fix iOS cav's logo.
Didn't work.  The same issue of the cavs logo displayin off screen is also present in FireFox on a Windows PC.
CSS targeting will not work for this

--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -245,10 +245,3 @@
 .recruit-pad {
   padding-top: 20px;
 }
-
-@supports (-webkit-overflow-scrolling: touch) and (max-width: 414px) {
-  // CSS specific to iOS devices
-  .center-logo {
-    margin-top: -55px;
-  }
-}
